--- a/public_html/.htaccess
+++ b/public_html/.htaccess
@@ -1,3 +1,12 @@
+<IfModule mod_rewrite.c>
 RewriteEngine On
+
+# Redirect www to non-www
+RewriteCond %{HTTP_HOST} ^www\.itfestivalpolsri\.com [NC]
+RewriteRule ^(.*)$ https://itfestivalpolsri.com/$1 [L,R=301]
+
+# Force http to https
 RewriteCond %{HTTPS} off
 RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+
+</IfModule>
